--- a/.github/actions/artifacts/upload-to-s3/action.yml
+++ b/.github/actions/artifacts/upload-to-s3/action.yml
@@ -14,7 +14,7 @@ runs:
     - name: Acquire AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+        role-to-assume: ${{ env.AWS_ROLE_ARN_SECRET }}
         aws-region: eu-central-1
 
     - name: Download Artifacts
