feat: add static build config for MUSL

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -10,5 +10,5 @@ components = [
     "rustc",
     "rustfmt",
 ]
-targets = [ "wasm32-unknown-unknown" ]
+targets = [ "wasm32-unknown-unknown", "x86_64-unknown-linux-musl" ]
 profile = "minimal"
