fix building docker image locally

--- a/dev/docker/Dockerfile
+++ b/dev/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM sidechains-substrate-node-builder:latest as builder
+FROM partner-chains-node-builder:latest AS builder
 
 FROM docker.io/library/ubuntu:20.04
 COPY --from=builder /partner-chains-node/docker-build/target/release/partner-chains-node /usr/local/bin
@@ -7,7 +7,7 @@ RUN useradd -m -u 1000 -U -s /bin/sh -d /substrate substrate && \
 	mkdir -p /data /substrate/.local/share/partner-chains-node && \
 	chown -R substrate:substrate /data && \
 	ln -s /data /substrate/.local/share/partner-chains-node && \
-# Sanity checks
+	# Sanity checks
 	ldd /usr/local/bin/partner-chains-node && \
 	/usr/local/bin/partner-chains-node --version
 
