--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -152,15 +152,17 @@ jobs:
       id-token: write
       contents: write
     if: >
-      (needs.upload-to-s3.result == 'success' || needs.upload-to-s3.result == 'skipped') &&
-      (needs.download-from-s3.result == 'success' || needs.download-from-s3.result == 'skipped')
+      always() && (
+        (inputs.no-build != 'true' && needs.upload-to-s3.result == 'success') || 
+        (inputs.no-build == 'true' && needs.download-from-s3.result == 'success')
+      )
     steps:
       - name: Artifacts Ready
         run: |
-          if [[ "${{ needs.upload-to-s3.result }}" == "success" ]]; then
+          if [[ "${{ inputs.no-build }}" != "true" ]]; then
             echo "Artifacts have been compiled and uploaded to S3"
-          elif [[ "${{ needs.download-from-s3.result }}" == "success" ]]; then
-            echo "Previously built artifacts were downloaded from S3."
+          else
+            echo "Previously built artifacts were downloaded from S3"
           fi
 
   build-and-publish-ecr:
