fix: artifact handling

--- a/.github/actions/artifacts/download-from-s3/action.yml
+++ b/.github/actions/artifacts/download-from-s3/action.yml
@@ -34,3 +34,24 @@ runs:
         mkdir -p $OUTPUT_DIR
         aws s3 cp --recursive "s3://$S3_BUCKET_NAME/$S3_PATH/" $OUTPUT_DIR
         echo "Artifacts downloaded successfully to $OUTPUT_DIR."
+
+    - name: Upload Linux Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: partner-chains-node-linux-artifact
+        path: artifacts/partner-chains-node-*-x86_64-linux
+        if-no-files-found: error
+
+    - name: Upload MacOS x86_64 Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: partner-chains-node-macos-x86_64-artifact
+        path: artifacts/partner-chains-node-*-x86_64-apple-darwin
+        if-no-files-found: error
+
+    - name: Upload MacOS ARM64 Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: partner-chains-node-macos-arm64-artifact
+        path: artifacts/partner-chains-node-*-aarch64-apple-darwin
+        if-no-files-found: error
