--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -174,6 +174,8 @@ jobs:
         - upload-to-s3
         - download-from-s3
       runs-on: ubuntu-latest
+      outputs:
+       status: success
       permissions:
         id-token: write
         contents: write
