make cardano slot length configurable
Signed-off-by: Nikolaos Dymitriadis <nikolaos.dymitriadis@iohk.io>

--- a/dev/envs/devnet/.envrc
+++ b/dev/envs/devnet/.envrc
@@ -27,6 +27,7 @@ export BLOCK_STABILITY_MARGIN=0
 # Timestamp for the MC_FIRST_EPOCH_NUMBER
 # Genesis should not have a timestamp before this one, this should be divisible by both sidechain slot and epoch durations
 export MC__FIRST_EPOCH_TIMESTAMP_MILLIS=1666656000000
+export MC__SLOT_DURATION_MILLIS=1000
 # First Shelley epoch number on Cardano
 export MC__FIRST_EPOCH_NUMBER=0
 # Should be divisible by Sidechain epoch duration (which is SlotDuration * SlotsPerEpoch and those params can be found in runtime/src/lib.rs)
