chore: update polkadot-sdk dependency to polkadot-stable-2412
OffchainWorkers are not used by this node and polkadot-sdk code does not
give an option to not try load native certificates. Dependency that is
currently used for reading native certs fails on some light docker
images.

--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -87,9 +87,7 @@ serde_json = { workspace = true }
 substrate-wasm-builder = { workspace = true, optional = true }
 
 [features]
-default = ["std", "with-rocksdb-weights"]
-with-rocksdb-weights = []
-with-paritydb-weights = []
+default = ["std"]
 std = [
 	"authority-selection-inherents/std",
 	"sp-block-rewards/std",
